--- a/index.html
+++ b/index.html
@@ -2,16 +2,123 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Happy的个人主页</title>
+    <title>Happy 的个人主页</title>
+    <!-- Google 字体 -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        h1 { color: #4CAF50; }
-        a { text-decoration: none; color: #2196F3; }
+        body {
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #f0f8ff, #e6f7ff);
+            min-height: 100vh;
+        }
+        .header {
+            padding: 50px 20px;
+            background: #4CAF50;
+            color: white;
+        }
+        .header img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 4px solid white;
+            margin-bottom: 20px;
+        }
+        .header h1 {
+            margin: 10px 0;
+        }
+        .content {
+            padding: 40px 20px;
+        }
+        .contact {
+            background: #fff;
+            display: inline-block;
+            padding: 20px 40px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            margin-top: 30px;
+        }
+        .contact h2 {
+            margin-bottom: 20px;
+            color: #4CAF50;
+        }
+        .contact p {
+            font-size: 18px;
+            margin: 10px 0;
+        }
+        .contact strong {
+            color: #2196F3;
+        }
+        .qr {
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            margin-top: 20px;
+        }
+        .qr div {
+            text-align: center;
+        }
+        .qr img {
+            width: 120px;
+            height: 120px;
+            border-radius: 15px;
+            border: 2px solid #ccc;
+        }
+        .footer {
+            margin-top: 50px;
+            padding: 20px;
+            font-size: 14px;
+            color: #888;
+        }
+        a.button {
+            display: inline-block;
+            margin: 10px;
+            padding: 10px 20px;
+            background: #2196F3;
+            color: white;
+            border-radius: 25px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+        a.button:hover {
+            background: #1976d2;
+        }
     </style>
 </head>
 <body>
-    <h1>欢迎来到 Happy 的个人主页</h1>
-    <p>这是我的第一个网页😊</p>
+    <div class="header">
+        <!-- 替换下面 src 链接为你的头像地址 -->
+        <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233412_9_79.jpg?raw=true"头像">
+        <h1>欢迎来到 Happy 的个人主页</h1>
+        <p>这里记录我的日常和点滴 😊</p>
+        <a class="button" href="#contact">联系我</a>
+    </div>
+
+    <div class="content" id="contact">
+        <div class="contact">
+            <h2>联系我</h2>
+            <p>微信：<strong>H4ppy_ma</strong></p>
+            <p>QQ：<strong>1348790438</strong></p>
+
+            <div class="qr">
+                <div>
+                    <p>微信扫码</p>
+                    <!-- 替换为你的微信二维码图片地址 -->
+                    <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true"微信二维码">
+                </div>
+                <div>
+                    <p>QQ扫码</p>
+                    <!-- 替换为你的 QQ 二维码图片地址 -->
+                    <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233554_11_79.jpg?raw=true" alt="QQ二维码">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        &copy; 2025 Happyma.top
+    </div>
 </body>
 </html>
-
