--- a/index.html
+++ b/index.html
@@ -3,159 +3,243 @@
 <head>
 <meta charset="UTF-8">
 <title>Happy 的个人主页</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* 动态背景 */
-    @keyframes gradientBG {
-        0% {background-position: 0% 50%;}
-        50% {background-position: 100% 50%;}
-        100% {background-position: 0% 50%;}
-    }
-    body {
-        margin: 0;
-        font-family: 'Roboto', sans-serif;
-        background: linear-gradient(-45deg, #f0f8ff, #e6f7ff, #ffe4e1, #f5f5dc);
-        background-size: 400% 400%;
-        animation: gradientBG 20s ease infinite;
-        color: #333;
-    }
-    header {
-        text-align: center;
-        padding: 60px 20px;
-        color: white;
-        position: relative;
-    }
-    header img {
-        width: 140px;
-        height: 140px;
-        border-radius: 50%;
-        border: 4px solid white;
-        margin-bottom: 20px;
-        transition: transform 0.3s ease;
-    }
-    header img:hover {
-        transform: scale(1.1);
-    }
-    header h1 {
-        margin: 10px 0;
-        font-size: 36px;
-    }
-    header p {
-        font-size: 18px;
-        margin: 5px 0;
-    }
-    nav {
-        margin-top: 20px;
-    }
-    nav a {
-        margin: 0 15px;
-        text-decoration: none;
-        color: white;
-        font-weight: bold;
-        transition: 0.3s;
-    }
-    nav a:hover {
-        color: #ffeb3b;
-    }
-    section {
-        padding: 60px 20px;
-        text-align: center;
-    }
-    section h2 {
-        font-size: 28px;
-        color: #4CAF50;
-        margin-bottom: 30px;
-    }
-    .cards {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 30px;
-    }
-    .card {
-        background: rgba(255,255,255,0.9);
-        padding: 30px 20px;
-        border-radius: 15px;
-        width: 300px;
-        box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .card:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 12px 30px rgba(0,0,0,0.2);
-    }
-    .card img {
-        width: 120px;
-        height: 120px;
-        border-radius: 15px;
-        margin-bottom: 15px;
-    }
-    .card p {
-        font-size: 16px;
-    }
-    .contact .qr {
-        display: flex;
-        justify-content: center;
-        margin-top: 20px;
-    }
-    .contact .qr img {
-        width: 140px;
-        height: 140px;
-        border-radius: 15px;
-        border: 2px solid #ccc;
-    }
-    footer {
-        text-align: center;
-        padding: 20px;
-        background: rgba(0,0,0,0.05);
-        color: #666;
-    }
-    a.button {
-        display: inline-block;
-        margin: 10px;
-        padding: 10px 25px;
-        background: #2196F3;
-        color: white;
-        border-radius: 25px;
-        text-decoration: none;
-        transition: 0.3s;
-    }
-    a.button:hover {
-        background: #1976d2;
-    }
+/* 动态背景渐变 */
+@keyframes gradientBG {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
+}
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background: linear-gradient(-45deg, #f0f8ff, #e6f7ff, #ffe4e1, #f5f5dc);
+    background-size: 400% 400%;
+    animation: gradientBG 20s ease infinite;
+    color: #333;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    transition: background 0.5s;
+}
+
+/* 夜间模式 */
+body.dark {
+    background: linear-gradient(-45deg, #1a1a1a, #2b2b2b, #3c3c3c, #444);
+    color: #eee;
+}
+
+/* 粒子背景 */
+#particles {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    pointer-events: none;
+    z-index: 0;
+}
+
+/* 头部 */
+header {
+    text-align: center;
+    padding: 60px 20px 20px;
+    color: white;
+    position: relative;
+    z-index: 1;
+}
+header img {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    border: 4px solid white;
+    margin-bottom: 20px;
+    transition: transform 0.3s ease;
+}
+header img:hover { transform: scale(1.1); }
+header h1 { margin: 10px 0; font-size: 36px; }
+header p { font-size: 18px; margin: 5px 0; }
+
+/* 吸顶导航栏 */
+nav {
+    margin-top: 20px;
+    background: rgba(0,0,0,0.2);
+    padding: 10px 0;
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    border-radius: 10px;
+    transition: background 0.3s, box-shadow 0.3s;
+}
+nav.scrolled {
+    background: rgba(0,0,0,0.7);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+nav a {
+    margin: 0 15px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    transition: 0.3s;
+}
+nav a.active { color: #ffeb3b; }
+nav a:hover { color: #ffeb3b; }
+
+/* 日间/夜间切换按钮 */
+#modeToggle {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 8px 15px;
+    background: linear-gradient(45deg,#2196F3,#21CBF3);
+    color: white;
+    border-radius: 20px;
+    cursor: pointer;
+    z-index: 10;
+    transition: background 0.3s;
+}
+#modeToggle:hover { background: linear-gradient(45deg,#1976d2,#1aa8c7); }
+
+/* 返回顶部按钮 */
+#toTopBtn {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background: linear-gradient(45deg,#4caf50,#81c784);
+    color: white;
+    border: none;
+    padding: 12px 18px;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 10;
+    display: none;
+    transition: 0.3s;
+}
+#toTopBtn:hover { background: linear-gradient(45deg,#388e3c,#66bb6a); }
+
+/* 分区 */
+section {
+    padding: 60px 20px;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+}
+section h2 {
+    font-size: 28px;
+    color: #4CAF50;
+    margin-bottom: 30px;
+}
+
+/* 卡片 */
+.card {
+    background: rgba(255,255,255,0.95);
+    padding: 30px 20px;
+    border-radius: 15px;
+    width: 320px;
+    margin: 0 auto 40px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.8s ease;
+    opacity: 0; 
+    transform: translateY(30px) scale(0.95);
+}
+.card.show {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+}
+.card:hover {
+    transform: translateY(-10px) scale(1) rotate(1deg);
+    box-shadow: 0 12px 30px rgba(0,0,0,0.2);
+}
+.card img {
+    width: 120px; height: 120px;
+    border-radius: 15px;
+    margin-bottom: 15px;
+}
+.card p { font-size: 16px; }
+
+/* 卡片丰富内容 7️⃣ */
+.card .tags {
+    margin-top: 10px;
+}
+.card .tag {
+    display: inline-block;
+    background: linear-gradient(45deg,#ff6b6b,#ffcc33);
+    color: white;
+    padding: 5px 10px;
+    margin: 3px;
+    border-radius: 15px;
+    font-size: 12px;
+    transition: transform 0.2s;
+}
+.card .tag:hover { transform: scale(1.1); }
+
+/* 联系我 */
+.contact .qr { display: flex; justify-content: center; margin-top: 20px; }
+.contact .qr img {
+    width: 140px; height: 140px;
+    border-radius: 15px;
+    border: 2px solid #ccc;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+.contact .qr img:hover { transform: scale(1.1); }
+
+/* 弹窗 */
+#qrModal {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+}
+#qrModal img {
+    max-width: 300px;
+    border-radius: 15px;
+    border: 3px solid #fff;
+}
+#qrModal.show { display: flex; }
+
+/* 页脚 */
+footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color: #666; }
+
+/* 响应式设计 1️⃣2️⃣ */
+@media(max-width:600px){
+    header img{width:100px;height:100px;}
+    .card{width:90%;}
+    nav a{margin:0 8px; font-size:14px;}
+}
 </style>
 </head>
 <body>
 
+<canvas id="particles"></canvas>
+
 <header>
-    <!-- 头像 -->
     <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233412_9_79.jpg?raw=true" alt="头像">
     <h1>欢迎来到 Happy 的主页</h1>
     <p>记录我的日常和点滴 😊</p>
-    <nav>
+    <nav id="mainNav">
         <a href="#about">关于我</a>
-        <a href="#diary">日记</a>
         <a href="#contact">联系我</a>
     </nav>
 </header>
 
+<div id="modeToggle">🌙 日/夜切换</div>
+
+<button id="toTopBtn">⬆️ 顶部</button>
+
 <section id="about">
     <h2>关于我</h2>
-    <div class="cards">
-        <div class="card">
-            <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233412_9_79.jpg?raw=true" alt="头像">
-            <p>Hi，我是 Happy，一名热爱生活的大学生，喜欢记录生活点滴和尝试新鲜事物。</p>
-        </div>
-    </div>
-</section>
-
-<section id="diary">
-    <h2>我的日记</h2>
-    <div class="cards">
-        <div class="card">
-            <p>2025-12-07: 今天学习了网页设计，搭建了个人主页！</p>
-        </div>
-        <div class="card">
+    <div class="card">
+        <p>Hi，我是 Happy，我来自河南郑州市，目前是郑州市西亚斯大一学生。在此我想分享我的生活。</p>
+        <div class="tags">
+            <span class="tag">学习</span>
+            <span class="tag">游戏</span>
+            <span class="tag">音乐</span>
+            <span class="tag">编程</span>
         </div>
     </div>
 </section>
@@ -165,10 +249,7 @@
     <p>微信：<strong>H4ppy_ma</strong></p>
     <div class="contact">
         <div class="qr">
-            <div>
-                <p>微信扫码</p>
-                <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码">
-            </div>
+            <img id="qrImg" src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码">
         </div>
     </div>
 </section>
@@ -177,5 +258,72 @@
     &copy; 2025 Happyma.top
 </footer>
 
+<div id="qrModal">
+    <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码大图">
+</div>
+
+<script>
+// 滚动显示动画 + 卡片漂浮旋转
+function showOnScroll() {
+    const cards = document.querySelectorAll('.card');
+    cards.forEach(card => {
+        const rect = card.getBoundingClientRect();
+        if (rect.top < window.innerHeight - 50) {
+            card.classList.add('show');
+            card.style.transform = `translateY(${Math.sin(window.scrollY/50)*5}px) scale(1) rotate(${Math.sin(window.scrollY/50)}deg)`;
+        }
+    });
+}
+window.addEventListener('scroll', showOnScroll);
+window.addEventListener('load', showOnScroll);
+
+// 粒子效果
+const canvas = document.getElementById('particles');
+const ctx = canvas.getContext('2d');
+let particlesArray = [];
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; initParticles(); });
+class Particle { constructor(){ this.x=Math.random()*canvas.width; this.y=Math.random()*canvas.height; this.size=Math.random()*3+1; this.speedX=Math.random()*1-0.5; this.speedY=Math.random()*1-0.5; } update(){ this.x+=this.speedX; this.y+=this.speedY; if(this.x>canvas.width)this.x=0; if(this.x<0)this.x=canvas.width; if(this.y>canvas.height)this.y=0; if(this.y<0)this.y=canvas.height; } draw(){ ctx.fillStyle='rgba(255,255,255,0.7)'; ctx.beginPath(); ctx.arc(this.x,this.y,this.size,0,Math.PI*2); ctx.fill(); } }
+function initParticles(){ particlesArray=[]; for(let i=0;i<100;i++){ particlesArray.push(new Particle()); } }
+function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles); }
+initParticles();
+animateParticles();
+
+// 微信二维码弹窗
+const qrImg = document.getElementById('qrImg');
+const qrModal = document.getElementById('qrModal');
+qrImg.addEventListener('click', () => qrModal.classList.add('show'));
+qrModal.addEventListener('click', () => qrModal.classList.remove('show'));
+
+// 日夜模式切换
+const modeToggle = document.getElementById('modeToggle');
+modeToggle.addEventListener('click', () => { document.body.classList.toggle('dark'); });
+
+// 导航滚动动态 + 高亮
+const mainNav = document.getElementById('mainNav');
+const navLinks = mainNav.querySelectorAll('a');
+window.addEventListener('scroll', () => {
+    if(window.scrollY>50) mainNav.classList.add('scrolled');
+    else mainNav.classList.remove('scrolled');
+
+    navLinks.forEach(link => {
+        const section = document.querySelector(link.getAttribute('href'));
+        if(section.offsetTop - 70 <= window.scrollY && section.offsetTop + section.offsetHeight > window.scrollY){
+            link.classList.add('active');
+        }else{ link.classList.remove('active'); }
+    });
+
+    // 返回顶部按钮显示
+    const toTopBtn = document.getElementById('toTopBtn');
+    if(window.scrollY > 200) toTopBtn.style.display = 'block';
+    else toTopBtn.style.display = 'none';
+});
+
+// 返回顶部按钮点击事件
+document.getElementById('toTopBtn').addEventListener('click', () => {
+    window.scrollTo({top:0, behavior:'smooth'});
+});
+</script>
 </body>
 </html>
