--- a/index.html
+++ b/index.html
@@ -21,13 +21,22 @@ body {
     color: #333;
     scroll-behavior: smooth;
     overflow-x: hidden;
-    transition: background 0.5s;
+    transition: background 0.5s, color 0.5s;
 }
 
 /* 夜间模式 */
 body.dark {
     background: linear-gradient(-45deg, #1a1a1a, #2b2b2b, #3c3c3c, #444);
     color: #eee;
+}
+
+/* 夜间模式卡片 & 日记文字 */
+body.dark .card {
+    background: rgba(50,50,50,0.9);
+    color: #eee;
+}
+body.dark .card .tag {
+    background: linear-gradient(45deg,#ff9800,#ff5722);
 }
 
 /* 粒子背景 */
@@ -223,6 +232,7 @@ footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color:
     <p>记录我的日常和点滴 😊</p>
     <nav id="mainNav">
         <a href="#about">关于我</a>
+        <a href="#diary">日记</a>
         <a href="#contact">联系我</a>
     </nav>
 </header>
@@ -231,6 +241,7 @@ footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color:
 
 <button id="toTopBtn">⬆️ 顶部</button>
 
+<!-- 关于我 -->
 <section id="about">
     <h2>关于我</h2>
     <div class="card">
@@ -244,6 +255,16 @@ footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color:
     </div>
 </section>
 
+<!-- 日记区 -->
+<section id="diary">
+    <h2>我的日记 📖</h2>
+    <div class="card">
+        <p><strong>2025年12月8日</strong></p>
+        <p>今天是我初次创建我的个人网站，目前还在测试中，以后我会逐步完善。耶✌</p>
+    </div>
+</section>
+
+<!-- 联系我 -->
 <section id="contact">
     <h2>联系我</h2>
     <p>微信：<strong>H4ppy_ma</strong></p>
@@ -263,7 +284,7 @@ footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color:
 </div>
 
 <script>
-// 滚动显示动画 + 卡片漂浮旋转
+// 滚动显示 + 卡片漂浮旋转
 function showOnScroll() {
     const cards = document.querySelectorAll('.card');
     cards.forEach(card => {
@@ -277,16 +298,45 @@ function showOnScroll() {
 window.addEventListener('scroll', showOnScroll);
 window.addEventListener('load', showOnScroll);
 
-// 粒子效果
+// 粒子效果 + 鼠标微动
 const canvas = document.getElementById('particles');
 const ctx = canvas.getContext('2d');
 let particlesArray = [];
+let mouse = {x:null, y:null};
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; initParticles(); });
-class Particle { constructor(){ this.x=Math.random()*canvas.width; this.y=Math.random()*canvas.height; this.size=Math.random()*3+1; this.speedX=Math.random()*1-0.5; this.speedY=Math.random()*1-0.5; } update(){ this.x+=this.speedX; this.y+=this.speedY; if(this.x>canvas.width)this.x=0; if(this.x<0)this.x=canvas.width; if(this.y>canvas.height)this.y=0; if(this.y<0)this.y=canvas.height; } draw(){ ctx.fillStyle='rgba(255,255,255,0.7)'; ctx.beginPath(); ctx.arc(this.x,this.y,this.size,0,Math.PI*2); ctx.fill(); } }
+window.addEventListener('mousemove', e => { mouse.x = e.x; mouse.y = e.y; });
+
+class Particle {
+    constructor(){
+        this.x=Math.random()*canvas.width;
+        this.y=Math.random()*canvas.height;
+        this.size=Math.random()*3+1;
+        this.speedX=Math.random()*1-0.5;
+        this.speedY=Math.random()*1-0.5;
+    }
+    update(){
+        this.x += this.speedX + (mouse.x? (mouse.x - this.x)*0.0005:0);
+        this.y += this.speedY + (mouse.y? (mouse.y - this.y)*0.0005:0);
+        if(this.x>canvas.width)this.x=0;
+        if(this.x<0)this.x=canvas.width;
+        if(this.y>canvas.height)this.y=0;
+        if(this.y<0)this.y=canvas.height;
+    }
+    draw(){
+        ctx.fillStyle='rgba(255,255,255,0.7)';
+        ctx.beginPath();
+        ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
+        ctx.fill();
+    }
+}
 function initParticles(){ particlesArray=[]; for(let i=0;i<100;i++){ particlesArray.push(new Particle()); } }
-function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles); }
+function animateParticles(){ 
+    ctx.clearRect(0,0,canvas.width,canvas.height); 
+    particlesArray.forEach(p=>{p.update();p.draw();}); 
+    requestAnimationFrame(animateParticles); 
+}
 initParticles();
 animateParticles();
 
