--- a/index.html
+++ b/index.html
@@ -21,13 +21,38 @@ body {
     color: #333;
     scroll-behavior: smooth;
     overflow-x: hidden;
-    transition: background 0.5s;
+    transition: background 0.5s, color 0.5s;
 }
 
 /* 夜间模式 */
 body.dark {
     background: linear-gradient(-45deg, #1a1a1a, #2b2b2b, #3c3c3c, #444);
     color: #eee;
+}
+
+/* 夜间模式卡片 & 标签 */
+.card {
+    background: rgba(255,255,255,0.95);
+    color: #333;
+    padding: 30px 20px;
+    border-radius: 15px;
+    width: 320px;
+    margin: 0 auto 40px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+    transition: background 0.5s, color 0.5s, opacity 0.8s ease, transform 0.3s ease;
+    opacity: 0;
+    transform: translateY(30px) scale(0.95);
+}
+.card.show {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+}
+body.dark .card {
+    background: rgba(50,50,50,0.9);
+    color: #eee;
+}
+body.dark .card .tag {
+    background: linear-gradient(45deg,#ff9800,#ff5722);
 }
 
 /* 粒子背景 */
@@ -99,6 +124,24 @@ nav a:hover { color: #ffeb3b; }
 }
 #modeToggle:hover { background: linear-gradient(45deg,#1976d2,#1aa8c7); }
 
+/* 返回顶部按钮 */
+#toTopBtn {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background: linear-gradient(45deg,#4caf50,#81c784);
+    color: white;
+    border: none;
+    padding: 12px 18px;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 10;
+    display: none;
+    transition: 0.3s;
+}
+#toTopBtn:hover { background: linear-gradient(45deg,#388e3c,#66bb6a); }
+
 /* 分区 */
 section {
     padding: 60px 20px;
@@ -112,34 +155,7 @@ section h2 {
     margin-bottom: 30px;
 }
 
-/* 卡片 */
-.card {
-    background: rgba(255,255,255,0.95);
-    padding: 30px 20px;
-    border-radius: 15px;
-    width: 320px;
-    margin: 0 auto 40px;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.8s ease;
-    opacity: 0; 
-    transform: translateY(30px) scale(0.95);
-}
-.card.show {
-    opacity: 1;
-    transform: translateY(0) scale(1);
-}
-.card:hover {
-    transform: translateY(-10px) scale(1) rotate(1deg);
-    box-shadow: 0 12px 30px rgba(0,0,0,0.2);
-}
-.card img {
-    width: 120px; height: 120px;
-    border-radius: 15px;
-    margin-bottom: 15px;
-}
-.card p { font-size: 16px; }
-
-/* 卡片丰富内容 7️⃣ */
+/* 卡片丰富内容 */
 .card .tags {
     margin-top: 10px;
 }
@@ -184,10 +200,7 @@ section h2 {
 }
 #qrModal.show { display: flex; }
 
-/* 页脚 */
-footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color: #666; }
-
-/* 响应式设计 1️⃣2️⃣ */
+/* 响应式设计 */
 @media(max-width:600px){
     header img{width:100px;height:100px;}
     .card{width:90%;}
@@ -205,12 +218,15 @@ footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color:
     <p>记录我的日常和点滴 😊</p>
     <nav id="mainNav">
         <a href="#about">关于我</a>
+        <a href="#diary">日记</a>
         <a href="#contact">联系我</a>
     </nav>
 </header>
 
 <div id="modeToggle">🌙 日/夜切换</div>
+<button id="toTopBtn">⬆️ 顶部</button>
 
+<!-- 关于我 -->
 <section id="about">
     <h2>关于我</h2>
     <div class="card">
@@ -224,6 +240,27 @@ footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color:
     </div>
 </section>
 
+<!-- 日记区 -->
+<section id="diary">
+    <h2>我的日记 📖</h2>
+
+    <!-- 日记添加表单 -->
+    <div class="card">
+        <input type="date" id="diaryDate" style="padding:5px;margin-bottom:5px;width:95%;" />
+        <textarea id="diaryContent" placeholder="写下今天的日记..." rows="3" style="padding:5px;width:95%;"></textarea>
+        <button id="addDiaryBtn" style="margin-top:5px;padding:5px 10px;cursor:pointer;">添加日记</button>
+    </div>
+
+    <!-- 日记列表 -->
+    <div id="diaryList">
+        <div class="card show">
+            <p><strong>2025-12-08</strong></p>
+            <p>今天是我初次创建我的个人网站，目前还在测试中，以后我会逐步完善。耶✌</p>
+        </div>
+    </div>
+</section>
+
+<!-- 联系我 -->
 <section id="contact">
     <h2>联系我</h2>
     <p>微信：<strong>H4ppy_ma</strong></p>
@@ -243,15 +280,13 @@ footer { text-align: center; padding: 20px; background: rgba(0,0,0,0.05); color:
 </div>
 
 <script>
-// 滚动显示动画 + 卡片轻微漂浮/旋转
+// 滚动显示卡片
 function showOnScroll() {
     const cards = document.querySelectorAll('.card');
     cards.forEach(card => {
         const rect = card.getBoundingClientRect();
         if (rect.top < window.innerHeight - 50) {
             card.classList.add('show');
-            // 漂浮小动画
-            card.style.transform += ` rotate(${(window.scrollY % 2 - 1) * 1}deg) translateY(${Math.sin(window.scrollY/50)*5}px)`;
         }
     });
 }
@@ -262,12 +297,41 @@ window.addEventListener('load', showOnScroll);
 const canvas = document.getElementById('particles');
 const ctx = canvas.getContext('2d');
 let particlesArray = [];
+let mouse = {x:null, y:null};
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; initParticles(); });
-class Particle { constructor(){ this.x=Math.random()*canvas.width; this.y=Math.random()*canvas.height; this.size=Math.random()*3+1; this.speedX=Math.random()*1-0.5; this.speedY=Math.random()*1-0.5; } update(){ this.x+=this.speedX; this.y+=this.speedY; if(this.x>canvas.width)this.x=0; if(this.x<0)this.x=canvas.width; if(this.y>canvas.height)this.y=0; if(this.y<0)this.y=canvas.height; } draw(){ ctx.fillStyle='rgba(255,255,255,0.7)'; ctx.beginPath(); ctx.arc(this.x,this.y,this.size,0,Math.PI*2); ctx.fill(); } }
+window.addEventListener('mousemove', e => { mouse.x = e.x; mouse.y = e.y; });
+
+class Particle {
+    constructor(){
+        this.x=Math.random()*canvas.width;
+        this.y=Math.random()*canvas.height;
+        this.size=Math.random()*3+1;
+        this.speedX=Math.random()*1-0.5;
+        this.speedY=Math.random()*1-0.5;
+    }
+    update(){
+        this.x += this.speedX + (mouse.x? (mouse.x - this.x)*0.0005:0);
+        this.y += this.speedY + (mouse.y? (mouse.y - this.y)*0.0005:0);
+        if(this.x>canvas.width)this.x=0;
+        if(this.x<0)this.x=canvas.width;
+        if(this.y>canvas.height)this.y=0;
+        if(this.y<0)this.y=canvas.height;
+    }
+    draw(){
+        ctx.fillStyle='rgba(255,255,255,0.7)';
+        ctx.beginPath();
+        ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
+        ctx.fill();
+    }
+}
 function initParticles(){ particlesArray=[]; for(let i=0;i<100;i++){ particlesArray.push(new Particle()); } }
-function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles); }
+function animateParticles(){ 
+    ctx.clearRect(0,0,canvas.width,canvas.height); 
+    particlesArray.forEach(p=>{p.update();p.draw();}); 
+    requestAnimationFrame(animateParticles); 
+}
 initParticles();
 animateParticles();
 
@@ -281,9 +345,10 @@ qrModal.addEventListener('click', () => qrModal.classList.remove('show'));
 const modeToggle = document.getElementById('modeToggle');
 modeToggle.addEventListener('click', () => { document.body.classList.toggle('dark'); });
 
-// 导航滚动动态 + 高亮
+// 导航滚动高亮 + 返回顶部
 const mainNav = document.getElementById('mainNav');
 const navLinks = mainNav.querySelectorAll('a');
+const toTopBtn = document.getElementById('toTopBtn');
 window.addEventListener('scroll', () => {
     if(window.scrollY>50) mainNav.classList.add('scrolled');
     else mainNav.classList.remove('scrolled');
@@ -294,6 +359,31 @@ window.addEventListener('scroll', () => {
             link.classList.add('active');
         }else{ link.classList.remove('active'); }
     });
+
+    if(window.scrollY > 200) toTopBtn.style.display = 'block';
+    else toTopBtn.style.display = 'none';
+});
+toTopBtn.addEventListener('click', () => { window.scrollTo({top:0, behavior:'smooth'}); });
+
+// 动态日记添加
+const addDiaryBtn = document.getElementById('addDiaryBtn');
+const diaryDate = document.getElementById('diaryDate');
+const diaryContent = document.getElementById('diaryContent');
+const diaryList = document.getElementById('diaryList');
+
+addDiaryBtn.addEventListener('click', () => {
+    const dateVal = diaryDate.value;
+    const contentVal = diaryContent.value.trim();
+    if (!dateVal || !contentVal) {
+        alert('请填写日期和内容');
+        return;
+    }
+    const newCard = document.createElement('div');
+    newCard.className = 'card show';
+    newCard.innerHTML = `<p><strong>${dateVal}</strong></p><p>${contentVal}</p>`;
+    diaryList.prepend(newCard);
+    diaryDate.value = '';
+    diaryContent.value = '';
 });
 </script>
 </body>
