--- a/index.html
+++ b/index.html
@@ -5,54 +5,17 @@
 <title>Happy 的个人主页</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <style>
-/* 动态背景渐变 */
-@keyframes gradientBG {
-    0% {background-position: 0% 50%;}
-    50% {background-position: 100% 50%;}
-    100% {background-position: 0% 50%;}
-}
-body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(-45deg, #f0f8ff, #e6f7ff, #ffe4e1, #f5f5dc);
-    background-size: 400% 400%;
-    animation: gradientBG 20s ease infinite;
-    color: #333;
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-    transition: background 0.5s, color 0.5s;
-}
-
-/* 夜间模式 */
-body.dark {
-    background: linear-gradient(-45deg, #1a1a1a, #2b2b2b, #3c3c3c, #444);
-    color: #eee;
-}
-
-/* 夜间模式卡片 & 标签 */
-.card {
-    background: rgba(255,255,255,0.95);
-    color: #333;
-    padding: 30px 20px;
-    border-radius: 15px;
-    width: 320px;
-    margin: 0 auto 40px;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-    transition: background 0.5s, color 0.5s, opacity 0.8s ease, transform 0.3s ease;
-    opacity: 0;
-    transform: translateY(30px) scale(0.95);
-}
-.card.show {
-    opacity: 1;
-    transform: translateY(0) scale(1);
-}
-body.dark .card {
-    background: rgba(50,50,50,0.9);
-    color: #eee;
-}
-body.dark .card .tag {
-    background: linear-gradient(45deg,#ff9800,#ff5722);
+/* 动态视频背景 */
+#bgVideo {
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  z-index:-1;
 }
 
 /* 粒子背景 */
@@ -61,16 +24,28 @@ body.dark .card .tag {
     top: 0; left: 0;
     width: 100%; height: 100%;
     pointer-events: none;
-    z-index: 0;
+    z-index:0;
+}
+
+/* 夜间模式 */
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    transition: background 0.5s, color 0.5s;
+}
+body.dark {
+    color: #eee;
 }
 
 /* 头部 */
 header {
     text-align: center;
     padding: 60px 20px 20px;
-    color: white;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 header img {
     width: 140px;
@@ -84,7 +59,7 @@ header img:hover { transform: scale(1.1); }
 header h1 { margin: 10px 0; font-size: 36px; }
 header p { font-size: 18px; margin: 5px 0; }
 
-/* 吸顶导航栏 */
+/* 导航 */
 nav {
     margin-top: 20px;
     background: rgba(0,0,0,0.2);
@@ -109,7 +84,7 @@ nav a {
 nav a.active { color: #ffeb3b; }
 nav a:hover { color: #ffeb3b; }
 
-/* 日间/夜间切换按钮 */
+/* 日/夜切换按钮 */
 #modeToggle {
     position: fixed;
     top: 20px;
@@ -124,7 +99,7 @@ nav a:hover { color: #ffeb3b; }
 }
 #modeToggle:hover { background: linear-gradient(45deg,#1976d2,#1aa8c7); }
 
-/* 返回顶部按钮 */
+/* 返回顶部 */
 #toTopBtn {
     position: fixed;
     bottom: 30px;
@@ -147,7 +122,7 @@ section {
     padding: 60px 20px;
     text-align: center;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 section h2 {
     font-size: 28px;
@@ -155,52 +130,36 @@ section h2 {
     margin-bottom: 30px;
 }
 
-/* 卡片丰富内容 */
-.card .tags {
-    margin-top: 10px;
-}
-.card .tag {
-    display: inline-block;
-    background: linear-gradient(45deg,#ff6b6b,#ffcc33);
-    color: white;
-    padding: 5px 10px;
-    margin: 3px;
+/* 卡片 */
+.card {
+    background: rgba(255,255,255,0.95);
+    color: #333;
+    padding: 30px 20px;
     border-radius: 15px;
-    font-size: 12px;
-    transition: transform 0.2s;
+    width: 320px;
+    margin: 0 auto 40px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.8s ease, background 0.5s, color 0.5s;
+    opacity: 0;
+    transform: translateY(30px) scale(0.95);
 }
+.card.show { opacity:1; transform:translateY(0) scale(1);}
+.card:hover { transform: scale(1.05); box-shadow:0 12px 30px rgba(0,0,0,0.3);}
+body.dark .card { background: rgba(50,50,50,0.9); color: #eee; }
+.card .tags { margin-top:10px; }
+.card .tag { display:inline-block; background: linear-gradient(45deg,#ff6b6b,#ffcc33); color:white; padding:5px 10px; margin:3px; border-radius:15px; font-size:12px; transition: transform 0.2s; }
 .card .tag:hover { transform: scale(1.1); }
 
 /* 联系我 */
-.contact .qr { display: flex; justify-content: center; margin-top: 20px; }
-.contact .qr img {
-    width: 140px; height: 140px;
-    border-radius: 15px;
-    border: 2px solid #ccc;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-}
+.contact .qr { display:flex; justify-content:center; margin-top:20px; }
+.contact .qr img { width:140px; height:140px; border-radius:15px; border:2px solid #ccc; cursor:pointer; transition: transform 0.3s ease; }
 .contact .qr img:hover { transform: scale(1.1); }
 
 /* 弹窗 */
-#qrModal {
-    display: none;
-    position: fixed;
-    z-index: 10;
-    left: 0; top: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.6);
-    justify-content: center;
-    align-items: center;
-}
-#qrModal img {
-    max-width: 300px;
-    border-radius: 15px;
-    border: 3px solid #fff;
-}
-#qrModal.show { display: flex; }
+#qrModal { display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; }
+#qrModal img { max-width:300px; border-radius:15px; border:3px solid #fff; }
+#qrModal.show { display:flex; }
 
-/* 响应式设计 */
 @media(max-width:600px){
     header img{width:100px;height:100px;}
     .card{width:90%;}
@@ -209,6 +168,11 @@ section h2 {
 </style>
 </head>
 <body>
+
+<!-- 视频背景 -->
+<video id="bgVideo" autoplay muted loop>
+    <source src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/Video%20Project%204.mp4?raw=true" type="video/mp4">
+</video>
 
 <canvas id="particles"></canvas>
 
@@ -244,20 +208,16 @@ section h2 {
 <section id="diary">
     <h2>我的日记 📖</h2>
 
-    <!-- 日记添加表单 -->
+    <!-- 日记表单 -->
     <div class="card">
         <input type="date" id="diaryDate" style="padding:5px;margin-bottom:5px;width:95%;" />
+        <input type="password" id="diaryPwd" placeholder="密码(可选)" style="padding:5px;margin-bottom:5px;width:95%;" />
         <textarea id="diaryContent" placeholder="写下今天的日记..." rows="3" style="padding:5px;width:95%;"></textarea>
         <button id="addDiaryBtn" style="margin-top:5px;padding:5px 10px;cursor:pointer;">添加日记</button>
     </div>
 
     <!-- 日记列表 -->
-    <div id="diaryList">
-        <div class="card show">
-            <p><strong>2025-12-08</strong></p>
-            <p>今天是我初次创建我的个人网站，目前还在测试中，以后我会逐步完善。耶✌</p>
-        </div>
-    </div>
+    <div id="diaryList"></div>
 </section>
 
 <!-- 联系我 -->
@@ -280,7 +240,12 @@ section h2 {
 </div>
 
 <script>
-// 滚动显示卡片
+// 初始化 Supabase
+const supabaseUrl = 'https://ydpqboowpfijppwgrals.supabase.co';
+const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InlkcHFib293cGZpanBwd2dyYWxzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUxNDI0NjAsImV4cCI6MjA4MDcxODQ2MH0.6uF8nCdjVzaevZroBoA7isiVWAZ6k5LXlAwQrbuYWYM';
+const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+
+// 显示卡片滚动动画
 function showOnScroll() {
     const cards = document.querySelectorAll('.card');
     cards.forEach(card => {
@@ -291,7 +256,7 @@ function showOnScroll() {
     });
 }
 window.addEventListener('scroll', showOnScroll);
-window.addEventListener('load', showOnScroll);
+window.addEventListener('load', () => { showOnScroll(); fetchDiaries(); });
 
 // 粒子效果
 const canvas = document.getElementById('particles');
@@ -308,12 +273,12 @@ class Particle {
         this.x=Math.random()*canvas.width;
         this.y=Math.random()*canvas.height;
         this.size=Math.random()*3+1;
-        this.speedX=Math.random()*1-0.5;
-        this.speedY=Math.random()*1-0.5;
+        this.speedX=Math.random()*2-1; // 加快
+        this.speedY=Math.random()*2-1;
     }
     update(){
-        this.x += this.speedX + (mouse.x? (mouse.x - this.x)*0.0005:0);
-        this.y += this.speedY + (mouse.y? (mouse.y - this.y)*0.0005:0);
+        this.x += this.speedX + (mouse.x? (mouse.x - this.x)*0.001:0);
+        this.y += this.speedY + (mouse.y? (mouse.y - this.y)*0.001:0);
         if(this.x>canvas.width)this.x=0;
         if(this.x<0)this.x=canvas.width;
         if(this.y>canvas.height)this.y=0;
@@ -326,12 +291,8 @@ class Particle {
         ctx.fill();
     }
 }
-function initParticles(){ particlesArray=[]; for(let i=0;i<100;i++){ particlesArray.push(new Particle()); } }
-function animateParticles(){ 
-    ctx.clearRect(0,0,canvas.width,canvas.height); 
-    particlesArray.forEach(p=>{p.update();p.draw();}); 
-    requestAnimationFrame(animateParticles); 
-}
+function initParticles(){ particlesArray=[]; for(let i=0;i<200;i++){ particlesArray.push(new Particle()); } }
+function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles); }
 initParticles();
 animateParticles();
 
@@ -345,46 +306,75 @@ qrModal.addEventListener('click', () => qrModal.classList.remove('show'));
 const modeToggle = document.getElementById('modeToggle');
 modeToggle.addEventListener('click', () => { document.body.classList.toggle('dark'); });
 
-// 导航滚动高亮 + 返回顶部
+// 导航高亮 + 返回顶部
 const mainNav = document.getElementById('mainNav');
 const navLinks = mainNav.querySelectorAll('a');
 const toTopBtn = document.getElementById('toTopBtn');
 window.addEventListener('scroll', () => {
-    if(window.scrollY>50) mainNav.classList.add('scrolled');
-    else mainNav.classList.remove('scrolled');
-
+    if(window.scrollY>50) mainNav.classList.add('scrolled'); else mainNav.classList.remove('scrolled');
     navLinks.forEach(link => {
         const section = document.querySelector(link.getAttribute('href'));
         if(section.offsetTop - 70 <= window.scrollY && section.offsetTop + section.offsetHeight > window.scrollY){
-            link.classList.add('active');
-        }else{ link.classList.remove('active'); }
+            link.classList.add('active'); } else{ link.classList.remove('active'); }
     });
-
-    if(window.scrollY > 200) toTopBtn.style.display = 'block';
-    else toTopBtn.style.display = 'none';
+    if(window.scrollY > 200) toTopBtn.style.display = 'block'; else toTopBtn.style.display = 'none';
 });
 toTopBtn.addEventListener('click', () => { window.scrollTo({top:0, behavior:'smooth'}); });
 
-// 动态日记添加
+// Supabase 日记功能
+const diaryList = document.getElementById('diaryList');
 const addDiaryBtn = document.getElementById('addDiaryBtn');
 const diaryDate = document.getElementById('diaryDate');
 const diaryContent = document.getElementById('diaryContent');
-const diaryList = document.getElementById('diaryList');
+const diaryPwd = document.getElementById('diaryPwd');
 
-addDiaryBtn.addEventListener('click', () => {
+async function fetchDiaries(){
+    const { data, error } = await supabase.from('diaries').select('*').order('id', { ascending: false });
+    if(error){ console.log(error); return; }
+    diaryList.innerHTML = '';
+    data.forEach(d => { addDiaryCard(d); });
+}
+
+function addDiaryCard(d){
+    const card = document.createElement('div');
+    card.className = 'card show';
+    card.innerHTML = `
+        <p><strong>${d.date}</strong></p>
+        <p>${d.content}</p>
+        ${d.password ? '<small>🔒已加密</small>' : ''}
+        <div style="margin-top:5px;">
+            <button onclick="editDiary(${d.id})">编辑</button>
+            <button onclick="deleteDiary(${d.id})">删除</button>
+        </div>
+    `;
+    diaryList.appendChild(card);
+}
+
+addDiaryBtn.addEventListener('click', async () => {
     const dateVal = diaryDate.value;
     const contentVal = diaryContent.value.trim();
-    if (!dateVal || !contentVal) {
-        alert('请填写日期和内容');
-        return;
-    }
-    const newCard = document.createElement('div');
-    newCard.className = 'card show';
-    newCard.innerHTML = `<p><strong>${dateVal}</strong></p><p>${contentVal}</p>`;
-    diaryList.prepend(newCard);
-    diaryDate.value = '';
-    diaryContent.value = '';
+    const pwdVal = diaryPwd.value.trim();
+    if(!dateVal||!contentVal){ alert('请填写日期和内容'); return; }
+    const { data, error } = await supabase.from('diaries').insert([{date:dateVal, content:contentVal, password: pwdVal}]);
+    if(error){ alert(error.message); return; }
+    diaryDate.value=''; diaryContent.value=''; diaryPwd.value='';
+    fetchDiaries();
 });
+
+async function deleteDiary(id){
+    if(!confirm('确认删除吗？')) return;
+    const { error } = await supabase.from('diaries').delete().eq('id',id);
+    if(error){ alert(error.message); return; }
+    fetchDiaries();
+}
+
+async function editDiary(id){
+    const newContent = prompt('请输入新的日记内容：');
+    if(newContent === null) return;
+    const { error } = await supabase.from('diaries').update({content:newContent}).eq('id',id);
+    if(error){ alert(error.message); return; }
+    fetchDiaries();
+}
 </script>
 </body>
 </html>
